services/aredn-piaware/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: aredn-piaware
  namespace: aredn-piaware
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: aredn-piaware
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: piaware
            app.kubernetes.io/instance: piaware
